--- a/数理逻辑.md
+++ b/数理逻辑.md
@@ -40,8 +40,13 @@
 #### 蕴涵联结词
 * 定义：设 $P,Q$ 为任意两个命题，复合命题"如果$P$ 则 $Q$"，称为P与Q的 **蕴涵式(implication)** ，记作 $P\to Q$ ，$to$ 被称为蕴涵联结词。 $P\to Q$ 为真当且仅当 $P$ 为真且 $Q$ 为假。一般将蕴涵式 $P\to Q$ 中的 $P$ 称为蕴涵式的前件，$Q$ 称为蕴涵式的后件。
 * 注意：在自然语言中，前件为假，不管结论真假，整个语句的意义，往往无法判断。但对于数理逻辑中的蕴涵联结词来说，当前件 $P$ 为假时，不管 $Q$ 的真假如何，则 $P\to Q$都为真。此时称为 **“善意推定”** 。
-> 如果∠A和∠B是对顶角，则∠A等于∠B。 即使∠A和∠B不相等，这仍然是一个真命题，即前件为假时，定理依然成立。
+> 如果∠A和∠B是对顶角，则∠A等于∠B。 即使∠A和∠B不相等，这 仍然是一个真命题，即前件为假时，定理依然成立。
 
 #### 等价联结词
 * 定义：设 $P,Q$ 为任意两个命题，复合命题"$P$ 当且仅当 $Q$"，称为P与Q的 **等价式(equivalence)** ，记作 $P\leftrightarrow Q$ ，$\leftrightarrow$ 被称为等价联结词。 $P\leftrightarrow Q$ 为真当且仅当 $P,Q$ 同为真假。
 * 实质：自然语言中的“等价”，”充分必要条件”，”当且仅当”等的逻辑抽象。
+
+#### 联结词优先级顺序
+* 所有五个联结词的优先级顺序为：否定、合取、析取、蕴涵、等价。
+* 同级的联结词，按照其出现的先后次序（从左到右）。
+* 若运算要求与优先级不一致时，可使用括号；同级符号相邻时，也可以使用括号。括号中的运算为最高优先级。
